# sp_vision_tutorial_26

./: .gitignore
lecture2/: CMakeLists.txt
lecture2/homework/: fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
lecture2/part_1/: cpp_basics  cpp_basics.cpp
